Fix stream loading

--- a/examples/person_tracker/frontend/index.html
+++ b/examples/person_tracker/frontend/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <rh-tiles mode="dual" left-width="85">
-      <rh-video key="nn_stream_0" slot="left"></rh-video>
+      <rh-video stream-key="nn_stream_0" slot="left"></rh-video>
       <rh-tiles mode="column" slot="right" class="numbers">
         <rh-number id="top" value="0" label="Top"></rh-number>
         <rh-number id="left" value="0" label="Left"></rh-number>
