--- a/examples/person_tracker/frontend/index.html
+++ b/examples/person_tracker/frontend/index.html
@@ -9,10 +9,11 @@
   </head>
 
   <body>
-    <rh-tiles mode="dual" left-width="85">
+    <rh-tiles mode="dual" left-width="87">
       <rh-video stream-key="nn_stream_0" slot="left"></rh-video>
       <rh-tiles mode="column" slot="right" class="numbers">
-        <rh-number id="top" value="0" label="Top"></rh-number>
+        <rh-number id="up" value="0" label="Up"></rh-number>
+        <rh-number id="down" value="0" label="Down"></rh-number>
         <rh-number id="left" value="0" label="Left"></rh-number>
         <rh-number id="right" value="0" label="Right"></rh-number>
       </rh-tiles>
