Update people tracker app

--- a/examples/person_tracker/frontend/index.html
+++ b/examples/person_tracker/frontend/index.html
@@ -12,8 +12,7 @@
     <rh-tiles mode="dual" left-width="87">
       <rh-video stream-key="nn_stream_0" slot="left"></rh-video>
       <rh-tiles mode="column" slot="right" class="numbers">
-        <rh-number id="up" value="0" label="Up"></rh-number>
-        <rh-number id="down" value="0" label="Down"></rh-number>
+        <rh-number id="total" value="0" label="Total"></rh-number>
         <rh-number id="left" value="0" label="Left"></rh-number>
         <rh-number id="right" value="0" label="Right"></rh-number>
       </rh-tiles>
